bad/mul_invalid_types_null_class.example_compiler_output
ERROR
[1mbad/mul_invalid_types_null_class.lat:6:7: [1;31merror: [0;1mmultiplication is defined only for int values, not `null` and `X`[m
	null * x;
	     [1;32m^[m
